add card and change the daisyUI theme

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,8 +23,8 @@
         <h1 class="mt-10">Playlists I Made</h1>
         <button id="loginButton" class="btn btn-success mt-9" style="border-radius: 50px;
             border-color: none;">Log in with Spotify</button>
-        <div id="playlists"></div>
     </center>
+    <div id="playlists"></div>
 
     <script src="script.js"></script>
 </body>
