Change font setting

--- a/public/index.html
+++ b/public/index.html
@@ -20,8 +20,8 @@
 </head>
 <body>
     <center>
-        <h1 class="mt-10">Playlists I Made</h1>
-        <button id="loginButton" class="btn btn-success mt-9" style="border-radius: 50px;
+        <h1 class="mt-10 text-2xl font-semibold">Playlists I Made</h1>
+        <button id="loginButton" class="btn btn-success mt-9 font-medium text-white" style="border-radius: 50px;
             border-color: none;">Log in with Spotify</button>
     </center>
     <div id="playlists"></div>
